test/testdata/variables/redeclared_local_error.lox
{
  var a = 1;
  // error: 'a' has already been declared
  // lint error: 'a' has already been declared
  var a;
  a = 2;
}
